<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    tools:context=".shoes.ShoesDetailFragment">
    <data>

        <variable
            name="viewModel"
            type="com.oliversolutions.dev.bloodpressurediary.main.BloodPressureViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        android:paddingBottom="@dimen/scroll_view_padding_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_grey"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/linear_layout_blood_pressure_save_layout_margin"
                    android:background="@drawable/my_rounded_bg"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/creation_date"
                        android:layout_width="@dimen/edit_text_creation_date_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:text="@={viewModel.creationDate}"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />

                    <ImageView
                        android:id="@+id/date_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_date"
                        app:tint="#000000"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/creation_time"
                        android:layout_width="@dimen/edit_text_creation_time_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:text="@={viewModel.creationTime}"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />

                    <ImageView
                        android:id="@+id/time_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_time"
                        app:tint="#000000"
                        tools:ignore="ContentDescription" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/linear_layout_layout_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/systolic_text_view_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/diastolic_text_view_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pulse_text_view_value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/systolic"
                    android:layout_width="@dimen/number_picker_systolic_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/number_picker_systolic_margin_left"
                    android:layout_marginEnd="@dimen/number_picker_systolic_margin_right"
                    android:layout_weight="1"
                    android:scrollbarStyle="insideOverlay"
                    android:value="@={viewModel.systolic}" />

                <NumberPicker
                    android:id="@+id/diastolic"
                    android:layout_width="@dimen/number_picker_diastolic_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/number_picker_diastolic_margin_left"
                    android:layout_marginEnd="@dimen/number_picker_diastolic_margin_right"
                    android:layout_weight="1"
                    android:value="@={viewModel.diastolic}" />

                <NumberPicker
                    android:id="@+id/pulse"
                    android:layout_width="@dimen/number_picker_pulse_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/number_picker_pulse_margin_left"
                    android:layout_marginEnd="@dimen/number_picker_pulse_margin_right"
                    android:layout_weight="1"
                    android:value="@={viewModel.pulse}" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/diagnosis_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/diagnosis_linearlayout_margin_top"
                android:background="@color/dark_grey"
                android:orientation="vertical"
                android:padding="@dimen/diagnosis_linearlayout_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/linear_layout_margin_top"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/diagnosis_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/diagnosis_title_margin_start"
                            android:text="@string/diagnosis_title_text_value"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/diagnosis_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/diagnosis_value_margin_start"
                            android:text="@string/diagnosis_value_text_value"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/help_button_padding"
                        app:srcCompat="@drawable/ic_help_circle"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/linear_layout_margin_left"
                    android:layout_marginTop="@dimen/linear_layout_margintop"
                    android:layout_marginEnd="@dimen/linear_layout_margin_right"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/hypotension_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/hypotension_button_height"
                        android:layout_weight="1"
                        app:strokeColor="#FFF"
                        numberpicker:backgroundTint="@android:color/holo_blue_light"
                        tools:ignore="NestedWeights" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/normal_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/normal_button_height"
                        android:layout_marginStart="@dimen/normal_button_margin_start"
                        android:layout_weight="1"
                        app:strokeColor="#FFF"
                        numberpicker:backgroundTint="@android:color/holo_green_light" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pre_hypertension_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pre_hypertension_button_height"
                        android:layout_marginStart="@dimen/pre_hypertension_button_margin_start"
                        android:layout_weight="1"
                        app:strokeColor="#FFF"
                        numberpicker:backgroundTint="@android:color/holo_orange_light" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/stage_1_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/stage_1_button_height"
                        android:layout_marginStart="@dimen/stage_1_button_margin_start"
                        android:layout_weight="1"
                        app:strokeColor="#FFF"
                        numberpicker:backgroundTint="@android:color/holo_orange_dark" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/stage_2_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/stage_2_button_height"
                        android:layout_marginStart="@dimen/stage_2_button_margin_start"
                        android:layout_weight="1"
                        app:strokeColor="#FFF"
                        numberpicker:backgroundTint="@android:color/holo_red_light" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/notes_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/notes_edit_text_margin_left"
                android:layout_marginTop="@dimen/notes_edit_text_margin_top"
                android:layout_marginEnd="@dimen/notes_edit_text_margin_right"
                android:layout_marginBottom="@dimen/notes_edit_text_margin_bottom"
                android:background="@drawable/my_rounded_bg"
                android:ems="10"
                android:hint="@string/notes_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewModel.notes}" />


        </LinearLayout>
    </ScrollView>
</layout>