...
                android:textSize="24sp" />

            <TextView
                android:id="@+id/no_data_found_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_record"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bloodPressureSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="@dimen/floating_action_button_margin_end"
            android:layout_marginBottom="@dimen/floating_action_button_margin_bottom"
            app:backgroundTint="@color/dark_grey"
...
